Initial commit.Signed-off-by: Akos Kitta <kittaakos@typefox.io>

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,11 @@ typings/
 
 # next.js build output
 .next
+
+/publisher-cli/node_modules/
+/publisher-cli/.storage/
+/publisher-cli/htpasswd/
+
+/publisher-node-api/node_modules/
+/publisher-node-api/.storage/
+/publisher-node-api/htpasswd/
