--- a/.gitignore
+++ b/.gitignore
@@ -62,8 +62,8 @@ typings/
 
 /publisher-cli/node_modules/
 /publisher-cli/.storage/
-/publisher-cli/htpasswd/
+/publisher-cli/htpasswd
 
 /publisher-node-api/node_modules/
 /publisher-node-api/.storage/
-/publisher-node-api/htpasswd/
+/publisher-node-api/htpasswd
